--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,18 @@ footer i:hover {
 footer p {
     font-size: smaller;
 }
+header {
+    padding:1rem;
+    margin: 1rem;
+    border: solid 2px black;
+}
+
+p {
+    width: 75%;
+    margin: 0 auto;
+}
 
 .full-width {
     text-align: center;
-    width: 100%;
     background-color: darkgrey;
 }
