--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
+    background-color: #D6E4E5;
 }
 
 h1 {
@@ -32,8 +33,9 @@ footer p {
     font-size: smaller;
 }
 
+
 .full-width {
     text-align: center;
     width: 100%;
-    background-color: darkgrey;
+    background-color: #497174;
 }
